# tak-feeder-nysse

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.MD  pyproject.toml
.github/workflows/: docker-build.yml
src/tak_feeder_nysse/: __init__.py  __main__.py  cot_utils.py  feeder.py
